// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`header render active for blogs 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div>
    <div
      className="navbar-brand"
    >
      <Link
        className="navbar-item"
        replace={false}
        to="/home.html"
      >
        <span
          className="is-hidden-mobile navbar-item"
        />
      </Link>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
        onClick={[Function]}
      >
        <Search
          setSearchResults={[Function]}
        />
        <DocsLink
          className={false}
        />
        <BlogLink
          className="is-active"
        />
        <GithubLink
          githubURL={null}
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`header renders githubURL 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div>
    <div
      className="navbar-brand"
    >
      <Link
        className="navbar-item"
        replace={false}
        to="/home.html"
      >
        <span
          className="is-hidden-mobile navbar-item"
        />
      </Link>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
        onClick={[Function]}
      >
        <Search
          setSearchResults={[Function]}
        />
        <DocsLink
          className="is-active"
        />
        <BlogLink
          className={false}
        />
        <GithubLink
          githubURL="https://github.com/sindresorhus/cows"
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`header renders logo 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div>
    <div
      className="navbar-brand"
    >
      <Link
        className="navbar-item"
        replace={false}
        to="/home.html"
      >
        <img
          alt="logo"
          className="navbar-item"
          src="https://github.com/sindresorhus/cows"
        />
        <span
          className="is-hidden-mobile navbar-item"
        />
      </Link>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
        onClick={[Function]}
      >
        <Search
          setSearchResults={[Function]}
        />
        <DocsLink
          className="is-active"
        />
        <BlogLink
          className={false}
        />
        <GithubLink
          githubURL={null}
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`header renders nav items 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div>
    <div
      className="navbar-brand"
    >
      <Link
        className="navbar-item"
        replace={false}
        to="/home.html"
      >
        <span
          className="is-hidden-mobile navbar-item"
        />
      </Link>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
        onClick={[Function]}
      >
        <Search
          setSearchResults={[Function]}
        />
        <NavItem
          item={
            Array [
              "root",
              "/",
            ]
          }
          location={
            Object {
              "pathname": "/",
            }
          }
          navItems={
            Object {
              "Doc 1": "/",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          setSearchResults={[Function]}
        />
        <NavItem
          item={
            Array [
              "Doc 1",
              "/",
            ]
          }
          location={
            Object {
              "pathname": "/",
            }
          }
          navItems={
            Object {
              "Doc 1": "/",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          setSearchResults={[Function]}
        />
        <NavItem
          item={
            Array [
              "Doc 2",
              "pages",
            ]
          }
          location={
            Object {
              "pathname": "/",
            }
          }
          navItems={
            Object {
              "Doc 1": "/",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          setSearchResults={[Function]}
        />
        <BlogLink
          className={false}
        />
        <GithubLink
          githubURL={null}
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`header renders nav items with just a index 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div>
    <div
      className="navbar-brand"
    >
      <Link
        className="navbar-item"
        replace={false}
        to="/home.html"
      >
        <span
          className="is-hidden-mobile navbar-item"
        />
      </Link>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
        onClick={[Function]}
      >
        <Search
          setSearchResults={[Function]}
        />
        <NavItem
          item={
            Array [
              "root",
              "/",
            ]
          }
          location={
            Object {
              "pathname": "/foo",
            }
          }
          navItems={
            Object {
              "Doc 1": "other/index.md",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          setSearchResults={[Function]}
        />
        <NavItem
          item={
            Array [
              "Doc 1",
              "other/index.md",
            ]
          }
          location={
            Object {
              "pathname": "/foo",
            }
          }
          navItems={
            Object {
              "Doc 1": "other/index.md",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          setSearchResults={[Function]}
        />
        <NavItem
          item={
            Array [
              "Doc 2",
              "pages",
            ]
          }
          location={
            Object {
              "pathname": "/foo",
            }
          }
          navItems={
            Object {
              "Doc 1": "other/index.md",
              "Doc 2": "pages",
              "root": "/",
            }
          }
          setSearchResults={[Function]}
        />
        <BlogLink
          className={false}
        />
        <GithubLink
          githubURL={null}
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`header renders title 1`] = `
<nav
  aria-label="main navigation"
  className="navbar"
  role="navigation"
>
  <div>
    <div
      className="navbar-brand"
    >
      <Link
        className="navbar-item"
        replace={false}
        to="/home.html"
      >
        <span
          className="is-hidden-mobile navbar-item"
        >
          Super Cool Docs
        </span>
      </Link>
      <a
        aria-expanded="false"
        aria-label="menu"
        className="navbar-burger"
        onClick={[Function]}
        role="button"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </a>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
        onClick={[Function]}
      >
        <Search
          setSearchResults={[Function]}
        />
        <DocsLink
          className="is-active"
        />
        <BlogLink
          className={false}
        />
        <GithubLink
          githubURL={null}
        />
      </div>
    </div>
  </div>
</nav>
`;
